--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,74 @@
+
 <!DOCTYPE html>
+<!--[if IE 8]> <html class="ie8"> <![endif]-->
+<!--[if IE 9]> <html class="ie9"> <![endif]-->
+<!--[if !IE]><!-->
 <html>
+<!--<![endif]-->
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+<meta charset="utf-8">
+<title>LadyBoo</title>
+<meta name="description" content="Responsive modern ecommerce Html5 Template">
+<!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/layout.css">
+<link rel="stylesheet" href="/css/page404_2.css">
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+<!-- Favicon and Apple Icons -->
+<link href='/images/favicon.ico' rel='shortcut icon' />
+<link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
+<link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
+<!--- jQuery -->
+<script>window.jQuery || document.write('<script src="/js/jquery-1.11.0.min.js"><\/script>')</script>
+<!--[if lt IE 9]>
+  <script src="/js/html5shiv.js"></script>
+  <script src="/js/respond.min.js"></script>
+<![endif]-->
 </head>
-
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+<div id="wrapper">
+ 
+  <!--Container Start**************************************************************************************************************-->
+  <section id="content">
+
+      <div class="container">
+        <div class="col-md-12">
+            <div class="row"><img id="bannerImg" src="/images/page/img_error.jpg"></div>
+            <h4>抱歉！<span>這個頁面無法取得</span></h4>
+            <h5>還請<a href="javascript: history.go(-1)" title="上一頁">返回上一頁</a>，或前往<a href="http://www.ladybootw.com" title="首頁">首頁</a></h5>
+        </div>
+        </div>
+      </div><!-- End .container -->
+
+  </section>
+  <!--Container End**************************************************************************************************************-->
+
+</div><!-- End #wrapper --> 
+
+<!-- Javascript --> 
+<script>
+$(function(){
+  
+  var widthMove = $(window).width();
+  move();
+  
+  function move(){
+    if(widthMove<588){
+      $('#bannerImg').attr('src','/images/page/img_error.png');
+    }else{
+      $('#bannerImg').attr('src','/images/page/img_error.jpg');
+    }
+  }
+  $(window).resize(function(){
+    widthMove = $(window).width();
+    move();
+  });
+
+})
+</script>
 </body>
 </html>
