--- a/public/404.html
+++ b/public/404.html
@@ -39,7 +39,7 @@
         <div class="col-md-12">
             <div class="row"><img id="bannerImg" src="/images/page/img_error.jpg"></div>
             <h4>抱歉！<span>這個頁面無法取得</span></h4>
-            <h5>還請<a href="javascript: history.go(-1)" title="上一頁">返回上一頁</a>，或前往<a href="http://www.ladybootw.com" title="首頁">首頁</a></h5>
+            <h5>還請<a href="javascript: history.go(-1)" title="上一頁">返回上一頁</a>，或前往<a href="http://www.ladyboo.com.tw" title="首頁">首頁</a></h5>
         </div>
         </div>
       </div><!-- End .container -->
